[squash] hero container now displays correctly on smaller devices

--- a/src/app/components/organisms/hero-section/heroSection.module.css
+++ b/src/app/components/organisms/hero-section/heroSection.module.css
@@ -4,7 +4,7 @@
     height: 660px;
 
     background-color: hsl(0, 0%, 98%);
-    background-image: url('../../../../../public/images/bg-intro-desktop.svg');
+    background-image: url('/images/bg-intro-desktop.svg');
     background-repeat: no-repeat;
     background-position-x: 655px;
     background-position-y: -264px;
